update halaman skills

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="foto kaila.jpeg" alt="Foto Kaila Zanita"></a>
+        <a href="index.html"><img src="/images/foto kaila.jpeg" alt="Foto Kaila Zanita"></a>
         <div class="title">
             <a href="index.html"><h1>ilacodes.</h1></a>
             <h2>Kaila's Profile Website (＜★)</h2>
@@ -38,7 +38,7 @@
                             </thead>
                             <tbody class="card-content">
                                 <td>
-                                    <img src="foto id kaila.png" alt="Foto Kaila Zanita" class="id-photo">
+                                    <img src="/images/foto id kaila.png" alt="Foto Kaila Zanita" class="id-photo">
                                 </td>
                                 <td>
                                     <table class="biodata-table">
@@ -93,6 +93,9 @@
                             <td>
                                 <i class="fa-solid fa-envelope"></i><a href="mailto:kailazanita.2005@gmail.com">kailazanita.2005@gmail.com</a>
                             </td>
+                            <td>
+                                <i class="fab fa-youtube"></i><a href="https://www.youtube.com/@ilailailailaila/featured" target="_blank">youtube.com/@ilailailailaila</a>
+                            </td>
                         </tr>
                     </table>
                 </div>
@@ -115,29 +118,47 @@
                         <li>
                             Himpunan Mahasiswa Sistem Informasi (HIMASIF)
                             <p>- Divisi Riset dan Pengembangan (February 2025 - Present)</p>
-                            <img src="rdp.JPG" alt="Divisi Riset dan Pengembangan HIMASIF">
+                            <div class="pengalaman-">
+                                <img src="/images/rdp.JPG" alt="Divisi Riset dan Pengembangan HIMASIF">
+                                <img src="/images/rdp2.JPG" alt="Divisi Riset dan Pengembangan HIMASIF">
+                            </div>
                         </li>
                         <li>
                             Great Innovation Day Hub (GIDHUB)
                             <p>- Divisi Konsumsi dan Danus (March 2025 - July 2025)</p>
-                            <img src="gidhub.JPG" alt="Great Innovation Day Hub (GIDHUB)">
+                            <div class="pengalaman-">
+                                <img src="/images/gidhub.JPG" alt="Great Innovation Day Hub (GIDHUB)">
+                                <img src="/images/gidhub2.JPG" alt="Great Innovation Day Hub (GIDHUB)">
+                            </div>
                         </li>
                         <li>
                             English Communication Hub Oratory (ECHO)
                             <p>- Treasurer (April 2025 - Present)</p>
-                            <img src="echo.jpeg" alt="English Communication Hub Oratory (ECHO)">
+                            <div class="pengalaman-">
+                                <img src="/images/echo.jpeg" alt="English Communication Hub Oratory (ECHO)">
+                                <img src="/images/echo2.jpeg" alt="English Communication Hub Oratory (ECHO)">
+                            </div>
                         </li>
                         <li>
                             Sistem Informasi, Universitas Pembangunan Jaya
                             <p>- Basic Python Training Session Instructor Assistant (June 2025 - July 2025)</p>
-                            <img src="python1.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                            <div class="pengalaman-">
+                                <img src="/images/python1.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                                <img src="/images/python12.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                            </div>
                             <P>- Basic Python Training Session Instructor Assistant (October 2025 - Present)</P>
-                            <img src="python2.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                            <div class="pengalaman-">
+                                <img src="/images/python2.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                                <img src="/images/python22.jpeg" alt="Basic Python Training Session Instructor Assistant">
+                            </div>
                         </li>
                         <li>
                             Prodi Gathering Sistem Informasi
                             <p>- Treasurer (July 2025 - August 2025)</p>
-                            <img src="progath.JPG" alt="Prodi Gathering Sistem Informasi">
+                            <div class="pengalaman-">
+                                <img src="/images/progath.JPG" alt="Prodi Gathering Sistem Informasi">
+                                <img src="/images/progath2.JPG" alt="Prodi Gathering Sistem Informasi">
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -146,11 +167,26 @@
                     <ul>
                         <li>Microsoft Office (Word, Excel, PowerPoint)</li>
                         <li>Basic Python</li>
-                        <li>Basic Web Development (HTML, CSS)</li>
+                        <li>Basic Web Development (HTML, CSS, JavaScript)</li>
                         <li>Basic Github</li>
                         <li>Basic Laravel</li>
                         <li>Figma</li>
                     </ul>
+                    <div class="keahlian-icons">
+                        <img src="/images/excel.svg" alt="Microsoft Office" id="icon-1">
+                        <img src="/images/word.png" alt="Microsoft Word" id="icon-2">
+                        <img src="/images/ppt.jpeg" alt="Microsoft PowerPoint" id="icon-1">
+                        <img src="/images/python.png" alt="Python" id="icon-2">
+                        <img src="/images/html.png" alt="HTML" id="icon-1">
+                        <img src="/images/css.png" alt="CSS" id="icon-2">
+                        <img src="/images/javascript.webp" alt="JavaScript" id="icon-1">
+                        <img src="/images/github.webp" alt="GitHub" id="icon-2">
+                        <img src="/images/laravel.png" alt="Laravel" id="icon-1">
+                        <img src="/images/figma.webp" alt="Figma" id="icon-2">
+                    </div>
+                </div>
+                <div class="portfolio content-section" id="portfolio">
+                    <h1>Portfolio ᝰ.ᐟ</h1>
                 </div>
                 <div class="film/series content-section" id="film/series">
                     <h1>Film/Series ೃ࿔*:･</h1>
