update galeri portfolio

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <li>
                             Himpunan Mahasiswa Sistem Informasi (HIMASIF)
                             <p>- Divisi Riset dan Pengembangan (February 2025 - Present)</p>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/rdp.JPG" alt="Divisi Riset dan Pengembangan HIMASIF">
                                 <img src="/images/rdp2.JPG" alt="Divisi Riset dan Pengembangan HIMASIF">
                             </div>
@@ -126,7 +126,7 @@
                         <li>
                             Great Innovation Day Hub (GIDHUB)
                             <p>- Divisi Konsumsi dan Danus (March 2025 - July 2025)</p>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/gidhub.JPG" alt="Great Innovation Day Hub (GIDHUB)">
                                 <img src="/images/gidhub2.JPG" alt="Great Innovation Day Hub (GIDHUB)">
                             </div>
@@ -134,7 +134,7 @@
                         <li>
                             English Communication Hub Oratory (ECHO)
                             <p>- Treasurer (April 2025 - Present)</p>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/echo.jpeg" alt="English Communication Hub Oratory (ECHO)">
                                 <img src="/images/echo2.jpeg" alt="English Communication Hub Oratory (ECHO)">
                             </div>
@@ -142,12 +142,12 @@
                         <li>
                             Sistem Informasi, Universitas Pembangunan Jaya
                             <p>- Basic Python Training Session Instructor Assistant (June 2025 - July 2025)</p>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/python1.jpeg" alt="Basic Python Training Session Instructor Assistant">
                                 <img src="/images/python12.jpeg" alt="Basic Python Training Session Instructor Assistant">
                             </div>
                             <P>- Basic Python Training Session Instructor Assistant (October 2025 - Present)</P>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/python2.jpeg" alt="Basic Python Training Session Instructor Assistant">
                                 <img src="/images/python22.jpeg" alt="Basic Python Training Session Instructor Assistant">
                             </div>
@@ -155,7 +155,7 @@
                         <li>
                             Prodi Gathering Sistem Informasi
                             <p>- Treasurer (July 2025 - August 2025)</p>
-                            <div class="pengalaman-">
+                            <div class="pengalaman-galeri">
                                 <img src="/images/progath.JPG" alt="Prodi Gathering Sistem Informasi">
                                 <img src="/images/progath2.JPG" alt="Prodi Gathering Sistem Informasi">
                             </div>
@@ -173,20 +173,59 @@
                         <li>Figma</li>
                     </ul>
                     <div class="keahlian-icons">
-                        <img src="/images/excel.svg" alt="Microsoft Office" id="icon-1">
-                        <img src="/images/word.png" alt="Microsoft Word" id="icon-2">
-                        <img src="/images/ppt.jpeg" alt="Microsoft PowerPoint" id="icon-1">
-                        <img src="/images/python.png" alt="Python" id="icon-2">
-                        <img src="/images/html.png" alt="HTML" id="icon-1">
-                        <img src="/images/css.png" alt="CSS" id="icon-2">
-                        <img src="/images/javascript.webp" alt="JavaScript" id="icon-1">
-                        <img src="/images/github.webp" alt="GitHub" id="icon-2">
-                        <img src="/images/laravel.png" alt="Laravel" id="icon-1">
-                        <img src="/images/figma.webp" alt="Figma" id="icon-2">
+                        <img src="/images/excel.svg" alt="Microsoft Office">
+                        <img src="/images/word.png" alt="Microsoft Word">
+                        <img src="/images/ppt.jpeg" alt="Microsoft PowerPoint">
+                        <img src="/images/python.png" alt="Python">
+                        <img src="/images/html.png" alt="HTML">
+                        <img src="/images/css.png" alt="CSS">
+                        <img src="/images/javascript.webp" alt="JavaScript">
+                        <img src="/images/github.webp" alt="GitHub">
+                        <img src="/images/laravel.png" alt="Laravel">
+                        <img src="/images/figma.webp" alt="Figma">
                     </div>
                 </div>
                 <div class="portfolio content-section" id="portfolio">
                     <h1>Portfolio ᝰ.ᐟ</h1>
+                    <ul>
+                        <li>
+                            360 AI - Chatbot Website
+                            <div class="description-galeri">
+                                <div class="description">
+                                    <p>click <a href="https://github.com/kailazanita/360AI-HIMASIF.git" target="_blank">here</a> to view the github repository.</p>
+                                    <p>A chatbot website that can answer general and HIMASIF-related questions, made with the focus to answer public questions regarding HIMASIF. Integrated using Python for the backend and ReactJS for the frontend. We use Firebase for Google Authentication API, as well as railway and vercel for deployment.</p>
+                                </div>
+                                <div class="portfolio-galeri">
+                                    <img src="/images/charbot1.png" alt="360 AI Chatbot Website">
+                                    <img src="/images/chatbot2.png" alt="360 AI Chatbot Website">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            ilafilms - Movie Rental Website
+                            <div class="description-galeri">
+                                <div class="description">
+                                   <p>A website to rent movies with affordable prices. Build using Laravel and MySQL to fulfill 'Website Programming and Design' course discipline.</p>
+                                </div>
+                                <div class="portfolio-galleri">
+                                    <img src="/images/ilafilms1.png" alt="ilafilms Movie Rental Website">
+                                    <img src="/images/ilafilms2.png" alt="ilafilms Movie Rental Website">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            Zanita Flowers - Accessories E-commerce Website
+                            <div class="description-galeri">
+                                <div class="description">
+                                   <p>A website to sell hand-made accessories such as rings, bracelets, necklaces, plushies, even knitted clothings. Build using HTML, CSS, and MySQL to fulfill 'Website Programming and Design' course discipline.</p>
+                                </div>
+                                <div class="portfolio-galleri">
+                                    <img src="/images/zanita-flowers1.png" alt="Zanita Flowers E-commerce Website">
+                                    <img src="/images/zanita-flowers2.png" alt="Zanita Flowers E-commerce Website">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div class="film/series content-section" id="film/series">
                     <h1>Film/Series ೃ࿔*:･</h1>
