polishing before presentation

--- a/index.html
+++ b/index.html
@@ -172,18 +172,6 @@
                         <li>Basic Laravel</li>
                         <li>Figma</li>
                     </ul>
-                    <div class="keahlian-icons">
-                        <img src="/images/excel.svg" alt="Microsoft Office">
-                        <img src="/images/word.png" alt="Microsoft Word">
-                        <img src="/images/ppt.jpeg" alt="Microsoft PowerPoint">
-                        <img src="/images/python.png" alt="Python">
-                        <img src="/images/html.png" alt="HTML">
-                        <img src="/images/css.png" alt="CSS">
-                        <img src="/images/javascript.webp" alt="JavaScript">
-                        <img src="/images/github.webp" alt="GitHub">
-                        <img src="/images/laravel.png" alt="Laravel">
-                        <img src="/images/figma.webp" alt="Figma">
-                    </div>
                 </div>
                 <div class="portfolio content-section" id="portfolio">
                     <h1>Portfolio ᝰ.ᐟ</h1>
@@ -227,8 +215,10 @@
                         </li>
                     </ul>
                 </div>
-                <div class="film/series content-section" id="film/series">
+                <div class="film-series content-section" id="film-series">
                     <h1>Film/Series ೃ࿔*:･</h1>
+                    <p>click <a href="https://letterboxd.com/kailazanita/" target="_blank">here</a> to view my letterboxd account.</p>
+                    <p>I enjoy watching films and series as a way to relax and unwind. My favorite genres include drama, romance, fantasy, and horror. I appreciate well-written scripts, compelling characters, and visually stunning cinematography. Watching films and series allows me to escape into different worlds and experience a wide range of emotions. It also provides an opportunity to learn about different cultures and perspectives.</p>
                     <h2>Movies</h2>
                     <ul>
                         <li>Pride & Prejudice</li>
@@ -266,41 +256,99 @@
                 </div>
                 <div class="music content-section" id="music">
                     <h1>Music ɞ˚‧｡⋆</h1>
+                    <p>click <a href="https://open.spotify.com/user/c41jlqdhkpijfrjsrd8i9947t?si=8bc86380b7fc47aa" target="_blank">here</a> to view my spotify profile.</p>
+                    <p>click <a href="https://music.apple.com/id/profile/kailazanita" target="_blank">here</a> to view my apple music profile.</p>  
+                    <p>Listening to music is one of my favorite pastimes. I enjoy a wide variety of genres, from pop and rock to classical and jazz. Music has the power to evoke emotions and memories, and I find it to be a great way to relax and unwind after a long day. I also appreciate the artistry and creativity that goes into composing and performing music. Overall, music is an essential part of my life that brings me joy and inspiration.</p>
                     <h2>K-Pop</h2>
-                    <ul>
-                        <li>Plot Twist - TWS</li>
-                        <li>Blue Valentine - NMIXX</li>
-                        <li>I Stan U - IU</li>
-                        <li>Likey - Twice</li>
-                        <li>Happy - Day6</li>
-                    </ul>
+                    <div class="playlist">
+                        <ul>
+                            <li>Plot Twist - TWS</li>
+                            <li>Blue Valentine - NMIXX</li>
+                            <li>Bye Summer - IU</li>
+                            <li>Likey - Twice</li>
+                            <li>Happy - Day6</li>
+                            <li>9 and Three Quarters (Run Away) - TXT</li>
+                            <li>Moonstruck - Enhypen</li>
+                            <li>Magnetic - ILLIT</li>
+                            <li>Ditto - Newjeans</li>
+                            <li>Save Me - Xdinary Heroes</li>
+                            <li>Spring Snow - 10CM</li>
+                            <li>Pretty U - Seventeen</li>
+                            <li>Blue - Zerobaseone</li>
+                            <li>Serenade - Boynextdoor</li>
+                            <li>Time for the Moon Night - Gfriend</li>
+                            <li>Star - N.Flying</li>
+                        </ul>
+                        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450px" style="width:100%;max-width:350px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/playlist/boyhood/pl.u-11zBJ73cKNZgGPM"></iframe>
+                    </div>
                     <h2>J-Pop</h2>
-                    <ul>
-                        <li>Love Song - Uru</li>
-                        <li>Yukiakari - &Team</li>
-                        <li>Shout Baby - Ryokuoushoku Shakai</li>
-                        <li>Nanairo - Bump of Chicken</li>
-                        <li>Left-Right Confusion - Yorushika</li>
-                    </ul>
+                    <div class="playlist">
+                        <ul>
+                            <li>Love Song - Uru</li>
+                            <li>Yukiakari - &Team</li>
+                            <li>Shout Baby - Ryokuoushoku Shakai</li>
+                            <li>Sleep Walking Orchestra - Bump of Chicken</li>
+                            <li>Left-Right Confusion - Yorushika</li>
+                            <li>Blue Jeans - HANA</li>
+                            <li>Secret Touch - Snowman</li>
+                            <li>Into the Night - YOASOBI</li>
+                            <li>Sincerely - TRUE</li>
+                            <li>Hikarie - miwa</li>
+                            <li>Blue Bird - Ikimonogakari</li>
+                            <li>Fiction - sumika</li>
+                            <li>Circle Game - Galileo Galilei</li>
+                            <li>Sakuranbo - Ai Otsuka</li>
+                            <li>Sparkle - RADWIMPS</li>
+                            <li>Anytime Anywhere - milet</li>
+                            <li>Brave Shine - Aimer</li>
+                        </ul>
+                        <iframe data-testid="embed-iframe" src="https://open.spotify.com/embed/playlist/7MoOmBmfqVgNQFySBDZfuu?utm_source=generator&theme=0" frameborder="0" height="450px" style="width:100%;max-width:350px;overflow:hidden;border-radius:10px;" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
                     <h2>Western</h2>
-                    <ul>
-                        <li>Iris - Goo Goo Dolls</li>
-                        <li>Amnesia - 5 Seconds of Summer</li>
-                        <li>Take A Chance With Me - NIKI</li>
-                        <li>Girls Just Wanna Have Fun - Cyndi Lauper</li>
-                        <li>Daylight - Taylor Swift</li>
-                    </ul>
+                    <div class="playlist">
+                        <ul>
+                            <li>Iris - Goo Goo Dolls</li>
+                            <li>Amnesia - 5 Seconds of Summer</li>
+                            <li>Take A Chance With Me - NIKI</li>
+                            <li>Girls Just Wanna Have Fun - Cyndi Lauper</li>
+                            <li>Daylight - Taylor Swift</li>
+                            <li>Bad Idea Right? - Olivia Rodrigo</li>
+                            <li>Good Luck, Babe! - Chappell Roan</li>
+                            <li>Cotton Candy - YUNGBLUD</li>
+                            <li>Wherever You Will Go - The Calling</li>
+                            <li>Fluorescent Adolescent - Arctic Monkeys</li>
+                            <li>Steal the Show - Lauv</li>
+                            <li>Don't Stop Me Now - Queen</li>
+                            <li>Where the Streets Have No Name - U2</li>
+                            <li>Everytime - Britney Spears</li>
+                        </ul>
+                        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450px" style="width:100%;max-width:350px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/playlist/gentle-earthquakes/pl.u-38oWZo8sZYg41MX"></iframe>
+                    </div>
                     <h2>Musicals</h2>
-                    <ul>
-                        <li>For Good - Wicked</li>
-                        <li>Revolting Children - Matilda</li>
-                        <li>Tightrope - The Greatest Showman</li>
-                        <li>Gotta Find You - Camp Rock</li>
-                        <li>I Have a Dream - Mamma Mia</li>
-                    </ul>
+                    <div class="playlist">
+                        <ul>
+                            <li>For Good - Wicked</li>
+                            <li>Revolting Children - Matilda</li>
+                            <li>Tightrope - The Greatest Showman</li>
+                            <li>Gotta Find You - Camp Rock</li>
+                            <li>I Have a Dream - Mamma Mia</li>
+                            <li>What I've Been Looking For - High School Musical</li>
+                            <li>If Only - Descendants</li>
+                            <li>Do You Hear The People Sing? - Les Misérables</li>
+                            <li>The Challenge - EPIC</li>
+                            <li>Sampai Berakhir - Siti Nurbaya</li>
+                            <li>You'll Be Back - Hamilton</li>
+                            <li>Show Yourself - Frozen</li>
+                            <li>We Don't Talk About Bruno - Encanto</li>
+                            <li>I Won't Say I'm in Love - Hercules</li>
+                        </ul>
+                        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450px" style="width:100%;max-width:350px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/id/playlist/broadway/pl.u-aZb0N54IR1V5gxW"></iframe>
+                    </div>
                 </div>
                 <div class="sweets content-section" id="sweets">
                     <h1>Sweets ⟡ ݁ . ⊹</h1>
+                    <p>As a person with a sweet tooth, I absolutely love sweets and desserts! My favorite types of sweets are chocolates and cakes, especially those that are rich in flavor and not too sweet. I also enjoy trying out different types of desserts from various cultures, such as Japanese mochi, French macarons, and Italian tiramisu. Sweets always bring me joy and comfort, and I believe that life is sweeter with a little indulgence now and then.</p>
+                    <h2>Favorite Sweets</h2>
                     <ul>
                         <li>Chocolates</li>
                         <li>Cakes</li>
@@ -313,10 +361,19 @@
                 </div>
                 <div class="scrapbooking content-section" id="scrapbooking">
                     <h1>Scrapbooking ✂︎ 𓂃</h1>
+                    <p>As an escape from all the academic and left-brain-heavy aspects of my life, I do scrapbooking and make journal spreads to hone my creative skills. For me, scrapbooking is a very therapeutic activity because I can put anything anywhere I want, without being afraid to go 'wrong'. My go-to topics for scrapbooking are K-Pop and Animes, but I'd love to make journal spreads about video games, languages, movies, or even fiction books in the future.</p>
                     <h2>Scrapbook Collections</h2>
+                    <img src="/images/scrapbook1.jpg" alt="Scrapbook Collection 1">
+                    <img src="/images/scrapbook2.jpg" alt="Scrapbook Collection 2">
+                    <img src="/images/scrapbook3.jpg" alt="Scrapbook Collection 3">
+                    <img src="/images/scrapbook4.jpg" alt="Scrapbook Collection 4">
+                    <img src="/images/scrapbook5.jpg" alt="Scrapbook Collection 5">
+                    <img src="/images/scrapbook6.jpg" alt="Scrapbook Collection 6">
                 </div>
                 <div class="videogames content-section" id="video-games">
                     <h1>Video Games . ݁·ꕤ</h1>
+                    <p>I enjoy playing video games as a way to unwind and have fun. My favorite genres include role-playing games, adventure games, and multiplayer games that allow me to play with friends and family. I appreciate games that offer immersive storytelling, engaging gameplay mechanics, and opportunities for creativity. Playing video games not only provides entertainment but also helps me develop problem-solving skills and strategic thinking.</p>
+                    <h2>Favorite Video Games</h2>
                     <ul>
                         <li>The Sims 4</li>
                         <li>The Legend of Zelda: Breath of the Wild</li>
@@ -327,9 +384,21 @@
                         <li>Moving Out</li>
                         <li>Overcooked</li>
                     </ul>
+                    <div class="video-games-gallery">
+                        <img src="/images/the-sims.jpg" alt="The Sims 4">
+                        <img src="/images/zelda.jpg" alt="The Legend of Zelda: Breath of the Wild">
+                        <img src="/images/brawlhalla.jpeg" alt="Brawlhalla">
+                        <img src="/images/squad-busters.webp" alt="Squad Busters">
+                        <img src="/images/among-us.jpeg" alt="Among Us">
+                        <img src="/images/it-takes-two.jpg" alt="It Takes Two">
+                        <img src="/images/moving-out.jpg" alt="Moving Out">
+                        <img src="/images/overcooked.jpg" alt="Overcooked">
+                    </div>
                 </div>
                 <div class="language-learning content-section" id="language-learning">
                     <h1>Language Learning ✩‧₊</h1>
+                    <p>I have a passion for learning new languages as it allows me to connect with different cultures and broaden my horizons. I enjoy the challenge of mastering new vocabulary, grammar, and pronunciation, and I find it rewarding to be able to communicate with people from diverse backgrounds. Language learning also enhances my cognitive skills and opens up opportunities for higher education, career, and personal growth.</p>
+                    <h2>Languages I'm Learning</h2>
                     <ul>
                         <li>English</li>
                         <li>Japanese</li>
@@ -339,6 +408,8 @@
                 </div>
                 <div class="coding content-section" id="coding">
                     <h1>Coding 𓂃𓈒𓏸</h1>
+                    <p>I enjoy coding as it allows me to create and build things from scratch. I find it fascinating how lines of code can come together to form functional applications, websites, and softwares. Coding challenges my problem-solving skills and encourages me to think logically and creatively. I appreciate the continuous learning aspect of coding, as there are always new languages, frameworks, and technologies to explore.</p>
+                    <h2>Programming Languages I'm Learning</h2>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
@@ -353,7 +424,7 @@
         <aside>
             <h1>ᡣ𐭩 ｡ Interests ꪆৎ ˚⋅</h1>
             <ul>
-                <li><a class="nav-link" data-target="film/series">Film/Series</a></li>
+                <li><a class="nav-link" data-target="film-series">Film/Series</a></li>
                 <li><a class="nav-link" data-target="music">Music</a></li>
                 <li><a class="nav-link" data-target="sweets">Sweets</a></li>
                 <li><a class="nav-link" data-target="scrapbooking">Scrapbooking</a></li>
